tests/expectations/compiler/finalize/unknown_mapping_operation_fail.out
Error [EPAR0370047]: Unknown associated function: Mapping::has_key
    --> compiler-test:12:26
     |
  12 |      let has_key: bool = Mapping::has_key(account, receiver);
     |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
